moving thanos and alerting avengers if he is near to stones

--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
 <body>
     <div id="map"></div>
     <div id="coords"></div>
+    <div class="stone-list">
+      <div class="stone-item">
+        <img src="../assets/images/time-stone.png" alt="Time Stone">
+        <p>Time Stone</p>
+      </div>
+      <div class="stone-item">
+        <img src="../assets/images/space-stone.png" alt="Space Stone">
+        <p>Space Stone</p>
+      </div>
+      <div class="stone-item">
+        <img src="../assets/images/reality-stone.png" alt="Reality Stone">
+        <p>Reality Stone</p>
+      </div>
+      <div class="stone-item">
+        <img src="../assets/images/mind-stone.png" alt="Mind Stone">
+        <p>Mind Stone</p>
+      </div>
+      <div class="stone-item">
+        <img src="../assets/images/power-stone.png" alt="Power Stone">
+        <p>Power Stone</p>
+      </div>
+      <div class="stone-item">
+        <img src="../assets/images/soul-stone.png" alt="Soul Stone">
+        <p>Soul Stone</p>
+      </div>
+    </div>
     <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACZo4O3DZi_iSbhYIB-UvsCTNyGRd5iqY&callback=initMap&v=weekly&language=en&region=IN"
     defer
