--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css" >
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="assets/js/script.js"></script>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <title>Avengers Assitant</title>
@@ -41,8 +41,11 @@
       </div>
     </div>
   </nav>
+  <div id="alert_box">
+  </div>
     <div id="map"></div>
-   
+    <script src="assets/js/script.js"></script>
+    
     <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACZo4O3DZi_iSbhYIB-UvsCTNyGRd5iqY&callback=initMap&v=weekly&language=en&region=IN"
     defer
