icons path changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="./marvel.html">Avengers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active " aria-current="page" href="./index.html">Track Thanos</a>
+            <a class="nav-link active " aria-current="page" href="#">Track Thanos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " aria-current="page" href="./infinityStonesDetails.html">Infinity Stones Details</a>
